# mkconf

./: CODE_OF_CONDUCT.md  Makefile  README.md  pyproject.toml
configs/: pytest.ini
scripts/: install.sh
src/mkconf/: config.py  plugin.py
tests/test_data/: .agenda.yaml  .organizers.yaml  .speakers.yaml  mkdocs.yml
tests/test_data/docs/: .organizers.yaml  SUMMARY.md  index.md
tests/test_data/docs/overrides/: main.html
tests/test_plugin/: test_config.py  test_plugin.py
