[tool.poetry]
name = "mkconf"
version = "0.1.0"
description = "Plugin for MKDocs to create conference websites"
authors = ["Leandro G. Almeida <leandro.g.almeida@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
Jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
